src/test/deca/context/invalid/renduInitial/00undefvar.res
/user/1/.base/lennea/home/Projet_GL/src/test/deca/context/invalid/renduInitial/00undefvar.deca:2:9: Identificateur non defini
